--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,18 @@
 <resources>
     <string name="app_name">POS</string>
 
+    <!--Tab標籤-->
     <string name="Drinks_Amount">結帳</string>
-
     <string name="DrinksType_Tea">純茶類</string>
     <string name="DrinksType_MilkTea">奶茶類</string>
 
+    <!--標題-->
+    <string name="DrinksTitle_Name">品名</string>
+    <string name="DrinksTitle_Price">單價</string>
+    <string name="DrinksTitle_Quantity">數量</string>
+    <string name="DrinksTitle_TotalPrice">總價</string>
+
+    <!--純茶類-->
     <string name="Tea_CeylonBlackTea">錫蘭紅茶</string>
     <string name="Tea_DarjeelingTea">大吉嶺紅茶</string>
     <string name="Tea_JasmineGreenTea">茉香綠茶</string>
@@ -13,12 +20,14 @@
     <string name="Tea_PuerhTea">普爾茶</string>
     <string name="Tea_ChrysanthemumTea">菊花茶</string>
 
+    <!--奶茶類-->
     <string name="MilkTea_BubbleMilkTea">珍珠奶茶</string>
     <string name="MilkTea_CoconutMilkTea">椰果奶茶</string>
     <string name="MilkTea_PuddingMilkTea">布丁奶茶</string>
     <string name="MilkTea_KantenMilkTea">寒天凍奶茶</string>
     <string name="MilkTea_GrassJellyMilkTea">仙草凍奶茶</string>
 
+    <!--配料-->
     <string name="Ingredients_TapiocaBalls">珍珠</string>
     <string name="Ingredients_SmallTapiocaBalls">小珍珠</string>
     <string name="Ingredients_Coconut">椰果</string>
@@ -26,17 +35,32 @@
     <string name="Ingredients_Kanten">寒天</string>
     <string name="Ingredients_GrassJelly">仙草</string>
 
+    <!--冰量-->
     <string name="Ice_none">去冰</string>
     <string name="Ice_Micro">微冰</string>
     <string name="Ice_Less">少冰</string>
     <string name="Ice_Normal">正常</string>
     <string name="Ice_More">多冰</string>
 
+    <!--糖量-->
     <string name="Sugar_none">無糖</string>
     <string name="Sugar_Micro">微糖</string>
     <string name="Sugar_Less">少糖</string>
     <string name="Sugar_Normal">正常</string>
     <string name="Sugar_More">多糖</string>
+
+    <!--價格-->
+    <string name="Price_CeylonBlackTea">20</string>
+    <string name="Price_DarjeelingTea">25</string>
+    <string name="Price_JasmineGreenTea">20</string>
+    <string name="Price_OolongTea">20</string>
+    <string name="Price_PuerhTea">20</string>
+    <string name="Price_ChrysanthemumTea">20</string>
+    <string name="Price_BubbleMilkTea">40</string>
+    <string name="Price_CoconutMilkTea">40</string>
+    <string name="Price_PuddingMilkTea">40</string>
+    <string name="Price_KantenMilkTea">45</string>
+    <string name="Price_GrassJellyMilkTea">45</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
